# water-tank-monitor

./: README.md  increment_version.py  partitions.csv  platformio.ini  upload_version.py
Docs/ReadmePics/: Sunton esp32-2432S032C.jfif
FlatCam/: 1.5mm_drill.DRL_cnc.nc  1mm_drill.DRL_cnc.nc  3mm_drill.DRL_cnc.nc  WaterTankMonitr_PCB_Plan_copper_bottom.gbr  WaterTankMonitr_PCB_Plan_copper_bottom.gbr_ncc_cnc.nc  WaterTankMonitr_PCB_Plan_outline.gbr  WaterTankMonitr_PCB_Plan_outline.gbr_cutout_cnc.nc  drill.DRL  mesh.xyz
SprintLayout/: WaterTankMonitr_PCB_Plan.lay6
SquareLine/: Themes.slt  WaterTank.sll  WaterTank.spj  WaterTank_events.py
SquareLine/assets/: ui_font_DejaVuSansMono14.fcfg  ui_font_MontserratRegular14ExtASCI.c  (+4 more)
include/: lv_conf.h
src/: globals.h  main.cpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.cpp  ui_themes.h
src/ui/components/: ui_comp_hook.c
src/ui/fonts/: ui_font_DejaVuSansMono14.c  ui_font_MontserratRegular14ExtASCIBold.c
src/ui/images/: ui_img_1628538605.c  ui_img_1718934963.c  ui_img_1_selecttanktype_png.c  ui_img_2_reactangledimensions_png.c  ui_img_3_cilinderdimensions_png.c  ui_img_478874422.c  ui_img_4_tankfullempty_png.c  ui_img_communicator_png.c  ui_img_qrcode_2_png.c  ui_img_wificonnectednointernet_png.c  ui_img_wifidisconnected_png.c  ui_img_wifiinternetok_png.c
src/ui/screens/: ui_ConnectToWifi.c  ui_Info.c  ui_MQTTSettings.c  ui_Main_Screen.c  ui_WifiScanResult.c  ui_Wifi_Settings.c
test/: ui.c
